Closed
Bug 340186
Opened 19 years ago
Closed 19 years ago
-mail doesn't work without a parameter
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: neil, Assigned: neil)
Details
Attachments
(2 files)
|
2.16 KB,
patch
|
standard8
:
review+
|
Details | Diff | Splinter Review |
|
2.17 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
If you start suiterunner with -mail -addressbook only the address book opens.
From reading the code I guess the same bug affects Thunderbird.
| Assignee | ||
Comment 1•19 years ago
|
||
Patch includes:
* #ifdefs to remove -options option from suite
* #ifdef to remove .eml handling from suite
Comment 2•19 years ago
|
||
Comment on attachment 224306 [details] [diff] [review]
Proposed patch
This works, but using the general.startup.mail pref I still get the following assertion (although the window does appear):
************************************************************
* Call to xpconnect wrapped JSObject produced this error: *
[Exception... "'Illegal value' when calling method: [nsICommandLine::handleFlagWithParam]" nsresult: "0x80070057 (NS_ERROR_ILLEGAL_VALUE)" location: "JS frame :: file:///opt/mozmaster/mozilla/sm2/dist/bin/components/nsBrowserContentHandler.js :: handle :: line 387" data: no]
************************************************************
I don't get this when starting up with -mail.
| Assignee | ||
Comment 3•19 years ago
|
||
(In reply to comment #2)
>This works, but using the general.startup.mail pref I still get the following
>assertion (although the window does appear):
Unfortunately this is an XPConnect limitation; the general startup code needs to throw an exception to propagate a failure code to HandleFlagWithParam.
Comment 4•19 years ago
|
||
Comment on attachment 224306 [details] [diff] [review]
Proposed patch
I haven't looked at all of this yet, but just so I don't forget:
nsMessengerBootstrap::Handle(nsICommandLine* aCmdLine)
{
nsresult rv;
- PRBool found;
Thunderbird still needs this variable.
| Assignee | ||
Comment 5•19 years ago
|
||
Yeah, I'll add it back but inside the #ifndef block.
Comment 6•19 years ago
|
||
(In reply to comment #2)
> (From update of attachment 224306 [details] [diff] [review] [edit])
> This works, but using the general.startup.mail pref I still get the following
> assertion (although the window does appear):
>
> ************************************************************
> * Call to xpconnect wrapped JSObject produced this error: *
> [Exception... "'Illegal value' when calling method:
> [nsICommandLine::handleFlagWithParam]" nsresult: "0x80070057
> (NS_ERROR_ILLEGAL_VALUE)" location: "JS frame ::
> file:///opt/mozmaster/mozilla/sm2/dist/bin/components/nsBrowserContentHandler.js
> :: handle :: line 387" data: no]
> ************************************************************
>
> I don't get this when starting up with -mail.
>
I don't appear to get this now, so I guess it may have been something in my build (I've rebuilt since).
Comment 7•19 years ago
|
||
Comment on attachment 224306 [details] [diff] [review]
Proposed patch
r=me with the tb compile error fixed.
Attachment #224306 -
Flags: review?(bugzilla) → review+
| Assignee | ||
Comment 8•19 years ago
|
||
Attachment #224628 -
Flags: superreview?(bienvenu)
Updated•19 years ago
|
Attachment #224628 -
Flags: superreview?(bienvenu) → superreview+
| Assignee | ||
Comment 9•19 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•