Bug 340186 -mail doesn't work without a parameter r=Standard8 sr=bienvenu